Bug 320750 - The "update" action in the notification context menu has a blank icon
Summary: The "update" action in the notification context menu has a blank icon
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: notifier (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-05 05:26 UTC by Jekyll Wu
Modified: 2013-06-05 13:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1
Sentry Crash Report:


Attachments
screenshot showing the problem (26.83 KB, image/png)
2013-06-05 05:28 UTC, Jekyll Wu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2013-06-05 05:26:09 UTC
I think the screenshot should describe the problem better than my words. 

Reproducible: Always
Comment 1 Jekyll Wu 2013-06-05 05:28:10 UTC
Created attachment 80307 [details]
screenshot showing the problem
Comment 2 Jonathan Thomas 2013-06-05 13:09:09 UTC
Git commit c2c074e88602d712efa9ebcbcb9bd9be898f7737 by Jonathan Thomas.
Committed on 05/06/2013 at 15:07.
Pushed by jmthomas into branch 'master'.

Add an API for using different tray icons and context menu action icons.
Tray icons can be Plasma theme svgs that can't be used as the icons for context menu actions.
This fixes a missing icon for the software update notification's context menu.
FIXED-IN:2.1

M  +1    -1    kded/UpdateEvent/UpdateEvent.cpp
M  +5    -2    kded/event.cpp
M  +2    -1    kded/event.h

http://commits.kde.org/muon/c2c074e88602d712efa9ebcbcb9bd9be898f7737