Add an API for using different tray icons and context menu action icons. Tray icons can be Plasma theme svgs that can't be used as the icons for context menu actions. This fixes a missing icon for the software update notification's context menu.

BUG:320750
FIXED-IN:2.1